[gd_scene load_steps=6 format=3 uid="uid://bwd307j2jlrd1"]

[ext_resource type="StyleBox" uid="uid://rjnm78u5f4dx" path="res://assets/theme/player_panel_stylebox.tres" id="1_c6nm4"]
[ext_resource type="Script" path="res://scripts/PlayerPanel.gd" id="1_x1w8t"]
[ext_resource type="Theme" uid="uid://khx2k8bemdah" path="res://assets/theme/step_up_theme.tres" id="1_ygxgu"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xb03e"]
properties/0/path = NodePath(".:player_name")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:player_color")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath(".:player_answer")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath(".:player_status")
properties/3/spawn = true
properties/3/sync = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4xgwr"]

[node name="PlayerPanel" type="PanelContainer"]
custom_minimum_size = Vector2(200, 180)
theme = ExtResource("1_ygxgu")
theme_override_styles/panel = ExtResource("1_c6nm4")
script = ExtResource("1_x1w8t")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xb03e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PlayerInputs" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/PlayerInputs"]
layout_mode = 2
theme = ExtResource("1_ygxgu")
text = "PlayerName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PlayerInputs"]
layout_mode = 2

[node name="StatusLabel" type="RichTextLabel" parent="MarginContainer/PlayerInputs"]
visible = false
custom_minimum_size = Vector2(0, 86.917)
layout_mode = 2
theme = ExtResource("1_ygxgu")
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "[center] Hello!"

[node name="AnswerTextEdit" type="TextEdit" parent="MarginContainer/PlayerInputs"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
theme = ExtResource("1_ygxgu")
placeholder_text = "	Input Answer"
context_menu_enabled = false
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false
middle_mouse_paste_enabled = false

[node name="SubmitButton" type="Button" parent="MarginContainer/PlayerInputs"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("1_ygxgu")
text = "Submit"

[node name="PlayerCustomization" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="NameLineEdit" type="LineEdit" parent="MarginContainer/PlayerCustomization"]
layout_mode = 2
theme = ExtResource("1_ygxgu")
placeholder_text = "Enter your name!"
alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PlayerCustomization"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_4xgwr")

[node name="Label" type="Label" parent="MarginContainer/PlayerCustomization"]
layout_mode = 2
theme = ExtResource("1_ygxgu")
text = "Pick a color!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer/PlayerCustomization"]
layout_mode = 2
text = "Pick me!"
edit_alpha = false

[node name="CustomizationSubmitButton" type="Button" parent="MarginContainer/PlayerCustomization"]
layout_mode = 2
theme = ExtResource("1_ygxgu")
text = "Submit"

[node name="HostButtons" type="Control" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 8

[node name="AddPointButton" type="Button" parent="HostButtons"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -37.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
text = "+"

[node name="SubtractPointButton" type="Button" parent="HostButtons"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -37.0
offset_right = 95.0
grow_vertical = 0
size_flags_horizontal = 0
text = "-"

[connection signal="synchronized" from="MultiplayerSynchronizer" to="." method="_on_multiplayer_synchronizer_synchronized"]
[connection signal="pressed" from="MarginContainer/PlayerInputs/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="MarginContainer/PlayerCustomization/CustomizationSubmitButton" to="." method="_on_customization_submit_button_pressed"]
[connection signal="pressed" from="HostButtons/AddPointButton" to="." method="_on_add_point_button_pressed"]
[connection signal="pressed" from="HostButtons/SubtractPointButton" to="." method="_on_subtract_point_button_pressed"]
